--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,15 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha04'
 
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+
+    //Location
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
